--- a/frontend/src/components/DetailView/DetailView.scss
+++ b/frontend/src/components/DetailView/DetailView.scss
@@ -1,42 +1,109 @@
 .detail-view {
-    background-color: #282c34;
-    padding: 20px;
-    border-radius: 8px;
-    margin-top: 20px;
-    width: 80%;
-    margin: 20px auto;
-    color: #61dafb;
-    text-align: left;
-  
-    h2 {
-      margin-bottom: 10px;
-    }
-  
-    .info-block {
-      margin-top: 10px;
-  
-      h3 {
-        margin-bottom: 5px;
-      }
-  
-      ul {
-        padding-left: 20px;
-        list-style-type: disc;
-      }
-    }
-  
-    .back-button {
-      margin-top: 20px;
-      padding: 8px 16px;
-      border-radius: 4px;
-      background-color: #61dafb;
-      border: none;
-      cursor: pointer;
-  
-      &:hover {
-        background-color: #4caf50;
-        color: #fff;
-      }
+  font-family: 'Star Jedi', sans-serif; // Mets une alternative si Star Jedi n'est pas dispo
+  padding: 20px;
+  color: #ffe81f; /* Jaune Star Wars */
+  background-color: #000; /* Fond noir */
+  min-height: 100vh; /* Prend toute la hauteur de l'écran */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 20px;
+  text-align: center;
+
+  .detail-title {
+    font-size: 2.5rem;
+    margin-bottom: 15px;
+    border-bottom: 2px solid #ffe81f;
+    padding-bottom: 5px;
+    text-transform: uppercase;
+  }
+
+  .back-button {
+    background-color: #ffe81f;
+    color: #000;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    font-size: 1rem;
+    text-transform: uppercase;
+    font-weight: bold;
+    transition: transform 0.2s ease-in-out;
+
+    &:hover {
+      transform: scale(1.1);
+      background-color: #fff;
     }
   }
-  
+}
+
+.detail-cards {
+  gap: 20px;
+  width: 100%;
+  max-width: 1200px;
+  margin-top: 20px;
+}
+
+.detail-card {
+  background: rgba(255, 255, 255, 0.1); /* Semi-transparent pour un effet de profondeur */
+  padding: 15px;
+  margin-bottom: 2%;
+  border-radius: 10px;
+  border: 2px solid #ffe81f;
+  box-shadow: 0 0 15px rgba(255, 232, 31, 0.7);
+  color: #fff;
+  text-align: left;
+
+  .name-detail-card{
+    text-align: center;
+    font-size: 2em;
+    padding-bottom: 2%;
+  }
+  .tab-detail-card{
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-evenly;
+    padding-bottom: 5%;
+
+    p {
+      font-size: 1em;
+    }
+  }
+
+  .detail-card-film {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+
+  h3 {
+    font-size: 1.5rem;
+    color: #ffe81f;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+  }
+
+  p,
+  li {
+    font-size: 1rem;
+    margin-bottom: 8px;
+    line-height: 1.5;
+  }
+
+  ul {
+    padding-left: 20px;
+    list-style-type: disc;
+  }
+
+  li {
+    margin-bottom: 5px;
+  }
+}
