fix delete console.log

--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,7 +1,7 @@
 .app-container {
-    font-family: 'Star Jedi', sans-serif; // Mets une alternative si Star Jedi n'est pas dispo
-    background-color: #000; // Fond noir
-    color: #ffe81f; // Texte jaune doré
+    font-family: 'Star Jedi', sans-serif;  
+    background-color: #000; 
+    color: #ffe81f; 
     min-height: 100vh;
     display: flex;
     flex-direction: column;
