--- a/frontend/src/components/ResultsList/ResultsList.scss
+++ b/frontend/src/components/ResultsList/ResultsList.scss
@@ -1,5 +1,5 @@
 .results-list {
-  background-color: rgba(0, 0, 0, 0.8); /* Fond semi-transparent */
+  background-color: rgba(0, 0, 0, 0.8); 
   padding: 20px;
   border-radius: 10px;
   margin: 20px;
