--- a/frontend/src/components/DetailView/DetailView.scss
+++ b/frontend/src/components/DetailView/DetailView.scss
@@ -1,9 +1,9 @@
 .detail-view {
-  font-family: 'Star Jedi', sans-serif; // Mets une alternative si Star Jedi n'est pas dispo
+  font-family: 'Star Jedi', sans-serif;
   padding: 20px;
-  color: #ffe81f; /* Jaune Star Wars */
-  background-color: #000; /* Fond noir */
-  min-height: 100vh; /* Prend toute la hauteur de l'écran */
+  color: #ffe81f; 
+  background-color: #000; 
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -51,7 +51,7 @@
 }
 
 .detail-card {
-  background: rgba(255, 255, 255, 0.1); /* Semi-transparent pour un effet de profondeur */
+  background: rgba(255, 255, 255, 0.1); 
   padding: 15px;
   margin-bottom: 2%;
   border-radius: 10px;
@@ -109,8 +109,8 @@
 
   .character-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); /* Ajuste la largeur minimale */
-    gap: 15px; /* Espacement entre les colonnes et les lignes */
+    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr)); 
+    gap: 15px; 
     list-style: none;
     padding: 0;
     margin: 0;
@@ -127,30 +127,29 @@
 
   .opening-crawl {
     position: relative;
-    width: 100%; /* S'adapte à la largeur de son conteneur */
-    height: 200px; /* Hauteur de la zone visible */
-    overflow: hidden; /* Cache le contenu qui dépasse */
-  
+    width: 100%; 
+    height: 200px; 
+    overflow: hidden; 
     .crawl-content {
       position: absolute;
       width: 100%;
       text-align: center;
-      color: #ffe81f; /* Couleur jaune Star Wars */
+      color: #ffe81f; 
       font-style: italic;
       font-size: 1.2rem;
       line-height: 2rem;
-      white-space: pre-line; /* Conserve les retours à la ligne dans le texte */
-      animation: scrollUp 15s linear infinite; /* Animation de défilement */
+      white-space: pre-line; 
+      animation: scrollUp 15s linear infinite;
     }
   }
   
-  /* Animation de défilement */
+  
   @keyframes scrollUp {
     0% {
-      transform: translateY(100%); /* Commence en bas */
+      transform: translateY(100%); 
     }
     100% {
-      transform: translateY(-100%); /* Termine en haut */
+      transform: translateY(-100%);
     }
   }
   
