--- a/frontend/src/components/FilterBar/FilterBar.scss
+++ b/frontend/src/components/FilterBar/FilterBar.scss
@@ -11,7 +11,7 @@
     align-items: center;
     gap: 10px;
     font-size: 1rem;
-    color: #ffe81f; /* Jaune Star Wars */
+    color: #ffe81f; 
     text-transform: uppercase;
     cursor: pointer;
     transition: transform 0.2s, color 0.2s;
@@ -25,7 +25,7 @@
       width: 18px;
       height: 18px;
       cursor: pointer;
-      accent-color: #ffe81f; /* Personnalise la couleur de la case cochée */
+      accent-color: #ffe81f; 
       border: 2px solid #ffe81f;
       transition: box-shadow 0.2s;
   
