--- a/frontend/src/index.scss
+++ b/frontend/src/index.scss
@@ -71,17 +71,16 @@ button:focus-visible {
   z-index: 1000;
 }
 
-/* Bouton de contrôle de la musique */
 .music-button {
   padding: 10px 20px;
   font-size: 1rem;
   font-weight: bold;
-  color: #ffe81f; /* Jaune Star Wars */
-  background-color: black; /* Fond noir */
-  border: 2px solid #ffe81f; /* Bordure jaune */
-  border-radius: 10px; /* Coins arrondis */
+  color: #ffe81f; 
+  background-color: black; 
+  border: 2px solid #ffe81f; 
+  border-radius: 10px; 
   cursor: pointer;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); /* Ombre pour un effet de profondeur */
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3); 
   transition: transform 0.2s ease, background-color 0.3s ease;
 
   &:hover {
